# chagaller

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: cli.rs  gallery.rs  image.rs  main.rs  pages.rs  render.rs
static/: style.css
templates/: image.html  index.html
