[package]
name = "chagaller"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
image = "0.25.2"
kamadak-exif = "0.5.5"
rust-embed = "8.5.0"
serde_yml = "0.0.12"
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
